# grabme

./: .editorconfig  .gitignore  Cargo.toml  DEPLOYMENT.md  LICENSE-APACHE  LICENSE-MIT  PLAN.md  PRD.md  README.md  RELEASING.md
.github/: SETUP_CHECKLIST.md
.github/workflows/: ci.yml  dist.yml  release.yml  vdesktop-tests.yml
apps/desktop/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: TimelineTrack.tsx
apps/overlay-ui/: Cargo.toml
apps/overlay-ui/src/: main.rs  webcam_preview.rs
crates/audio-ai/: Cargo.toml
crates/audio-ai/src/: lib.rs  noise.rs  subtitles.rs  transcription.rs
crates/capture-engine/: Cargo.toml
crates/capture-engine/src/: lib.rs  pipeline.rs  session.rs
crates/capture-engine/src/backend/: linux.rs  macos.rs  mod.rs  windows.rs
crates/common/: Cargo.toml
crates/common/src/: clock.rs  config.rs  error.rs  lib.rs  logging.rs
crates/input-tracker/: Cargo.toml
crates/input-tracker/src/: backends.rs  lib.rs  writer.rs
crates/input-tracker/src/backends/: linux.rs  non_linux.rs
crates/platform-core/: Cargo.toml
crates/platform-core/src/: lib.rs
crates/platform-linux/: Cargo.toml
crates/platform-linux/src/: display.rs  lib.rs  permissions.rs  portal.rs
crates/platform-macos/: Cargo.toml
crates/platform-macos/src/: lib.rs
crates/platform-windows/: Cargo.toml
crates/platform-windows/src/: lib.rs
crates/processing-core/: Cargo.toml
crates/processing-core/src/: auto_zoom.rs  camera_preview.rs  cursor_smooth.rs  heatmap.rs  lib.rs  vertical.rs
crates/processing-core/tests/: auto_director_golden.rs
crates/project-model/: Cargo.toml
crates/project-model/src/: event.rs  lib.rs  project.rs  timeline.rs  viewport.rs
crates/render-engine/: Cargo.toml
crates/render-engine/src/: compositor.rs  export.rs  lib.rs
docs/: architecture.md  book.toml  data-contracts.md  export-pipeline.md  linux-capture.md  overlay-ui.md  roadmap.md  testing-automated.md  testing-strategy.md
docs/src/: SUMMARY.md  data-contracts.md  export-pipeline.md  index.md  linux-capture.md  overlay-ui.md  roadmap.md  testing-automated.md  testing-strategy.md
fixtures/sample-project/meta/: events.jsonl  project.json  timeline.json
recording/exports/: output.ffmpeg-debug.txt  output.verification.json
recording/meta/: events.jsonl  project.json  timeline.json
recording/sources/: screen.mkv
scripts/: generate_fixture_events.py  install.sh  validate_phase1_fixture.py
test/meta/: project.json  timeline.json
tools/e2e-cursor-drift/: Cargo.toml  run.sh
tools/e2e-cursor-drift/src/: main.rs
tools/grabme-cli/: Cargo.toml
tools/grabme-cli/src/: main.rs
tools/grabme-cli/src/commands/: analyze.rs  check.rs  export.rs  info.rs  init.rs  mod.rs  record.rs  validate.rs
tools/vdesktop-tests/: Cargo.toml  README.md
tools/vdesktop-tests/src/: main.rs  synthetic.rs  verify.rs
