[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/project-model",
    "crates/platform-core",
    "crates/platform-linux",
    "crates/platform-windows",
    "crates/platform-macos",
    "crates/capture-engine",
    "crates/input-tracker",
    "crates/processing-core",
    "crates/render-engine",
    "crates/audio-ai",
    "tools/grabme-cli",
    "apps/overlay-ui",
    "tools/e2e-cursor-drift",
    "tools/vdesktop-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["GrabMe Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/velocitatem/grabme"
homepage = "https://github.com/velocitatem/grabme"
documentation = "https://docs.rs/grabme"
readme = "README.md"
keywords = ["screen-recorder", "video-editor", "linux", "screencast"]
categories = ["multimedia::video", "command-line-utilities"]

[workspace.dependencies]
# Internal crates
grabme-common = { version = "0.1.0", path = "crates/common" }
grabme-project-model = { version = "0.1.0", path = "crates/project-model" }
grabme-platform-core = { version = "0.1.0", path = "crates/platform-core" }
grabme-capture-engine = { version = "0.1.0", path = "crates/capture-engine" }
grabme-input-tracker = { version = "0.1.0", path = "crates/input-tracker" }
grabme-processing-core = { version = "0.1.0", path = "crates/processing-core" }
grabme-render-engine = { version = "0.1.0", path = "crates/render-engine" }
grabme-audio-ai = { version = "0.1.0", path = "crates/audio-ai" }
grabme-platform-linux = { version = "0.1.0", path = "crates/platform-linux" }
grabme-platform-windows = { version = "0.1.0", path = "crates/platform-windows" }
grabme-platform-macos = { version = "0.1.0", path = "crates/platform-macos" }

# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
gstreamer = "0.23"
ashpd = { version = "0.9", default-features = false, features = ["tokio"] }
evdev = "0.12"
libc = "0.2"

# Time and sync
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# Testing
proptest = "1.4"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
