[package]
name = "grabme-audio-ai"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Audio intelligence: local transcription (Whisper) and noise suppression for GrabMe"

[dependencies]
grabme-common = { workspace = true }
grabme-project-model = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
