[package]
name = "grabme-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Shared error types, configuration, clock utilities, and tracing setup for GrabMe"

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
