[package]
name = "grabme-input-tracker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Mouse, keyboard, and window focus tracking for GrabMe"

[dependencies]
grabme-common = { workspace = true }
grabme-project-model = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
