[package]
name = "grabme-input-tracker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Mouse, keyboard, and window focus tracking for GrabMe"
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
grabme-common = { workspace = true }
grabme-project-model = { workspace = true }
grabme-platform-core = { workspace = true }
grabme-platform-linux = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
evdev = { workspace = true }
libc = { workspace = true }
