[package]
name = "grabme-platform-macos"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "macOS platform scaffolding for GrabMe"
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
grabme-common = { workspace = true }
grabme-platform-core = { workspace = true }

serde = { workspace = true }
tracing = { workspace = true }
