[package]
name = "grabme-platform-windows"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Windows platform scaffolding for GrabMe"
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
grabme-common = { workspace = true }
grabme-platform-core = { workspace = true }

serde = { workspace = true }
tracing = { workspace = true }
