[package]
name = "grabme-processing-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Auto-Director: zoom analysis, cursor smoothing, and camera generation for GrabMe"

[dependencies]
grabme-common = { workspace = true }
grabme-project-model = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
