[package]
name = "grabme-render-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Offline rendering and export pipeline for GrabMe"

[dependencies]
grabme-common = { workspace = true }
grabme-project-model = { workspace = true }
grabme-processing-core = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
