[package]
name = "e2e-cursor-drift"
version = "0.1.0"
edition = "2021"

[dependencies]
grabme-capture-engine = { workspace = true }
grabme-project-model = { workspace = true }
grabme-common = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
