[package]
name = "grabme-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "GrabMe command-line tool: record, validate, analyze, and export projects"
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "grabme"
path = "src/main.rs"

[dependencies]
grabme-common = { workspace = true }
grabme-project-model = { workspace = true }
grabme-capture-engine = { workspace = true }
grabme-input-tracker = { workspace = true }
grabme-processing-core = { workspace = true }
grabme-render-engine = { workspace = true }
grabme-audio-ai = { workspace = true }
grabme-platform-linux = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
