[package]
name = "grabme-desktop"
version = "0.1.0"
description = "GrabMe Tauri desktop app"
authors = ["GrabMe Contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
grabme-project-model = { path = "../../../crates/project-model" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[workspace]
